--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 *.sublime-workspace
 
 # IDE - VSCode
-*.vscode/*
-!.vscode/settings.json
+*/.vscode/*
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -39,3 +39,4 @@
 *.DS_Store
 *Thumbs.db
 *.lock
+
