--- a/cb-web-client/package.json
+++ b/cb-web-client/package.json
@@ -27,6 +27,7 @@
     "@angular/service-worker": "^6.1.0",
     "@types/googlemaps": "^3.30.13",
     "angular-in-memory-web-api": "^0.6.1",
+    "angular-material-fileupload": "^1.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
